<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.santacruzinstruments.ottopi.ui.start_line.StartFragment"
        android:label="@string/race_start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_navFragment"
            app:destination="@id/navFragment" />
        <action
            android:id="@+id/action_startFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navFragment"
        android:name="com.santacruzinstruments.ottopi.ui.mainscreen.NavFragment"
        android:label="@string/navigation"
        tools:layout="@layout/fragment_nav" >
        <action
            android:id="@+id/action_navFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.santacruzinstruments.ottopi.ui.app_settings.SettingsFragment"
        android:label="@string/app_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/raceSetupFragment"
        android:name="com.santacruzinstruments.ottopi.ui.race_setup.RaceSetupFragment"
        android:label="@string/race_setup"
        tools:layout="@layout/fragment_race_setup" >
        <argument
            android:name="gpxName"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/boatSetupFragment"
        android:name="com.santacruzinstruments.ottopi.ui.boat_setup.BoatSetupFragment"
        android:label="@string/boat_setup"
        tools:layout="@layout/fragment_boat_setup" >

        <argument
            android:name="polarName"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <!--  Global actions   -->

    <action
        android:id="@+id/action_global_raceSetupFragment"
        app:destination="@id/raceSetupFragment" />

    <action
        android:id="@+id/action_global_boatSetupFragment"
        app:destination="@id/boatSetupFragment" />


</navigation>