<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/itemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:text="@string/twa"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCalibrate"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RaceSetupText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCalibrate"
        app:layout_constraintStart_toEndOf="@+id/itemLabel"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RaceSetupText"
        tools:text="120" />

    <Button
        android:id="@+id/buttonCalibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/calibrate"
        app:layout_constraintStart_toEndOf="@+id/itemValue"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/buttonCalibrate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calValue"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        tools:text="10" />

    <SeekBar
        android:id="@+id/seekBar"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calValue"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalibrate" />

</androidx.constraintlayout.widget.ConstraintLayout>
