<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="18dp"
    tools:context=".ui.ConnectionStateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/UsbStatusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/red"
            android:src="@drawable/ic_usb_connection"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />


        <TextView
            android:id="@+id/ConnStateTextView"
            style="@style/ConnectionStatusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/UsbStatusImageView"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Connecting" />

        <TextView
            android:id="@+id/DataReceptionGpsTextView"
            style="@style/ConnectionStatusText"
            android:layout_height="match_parent"
            android:layout_width="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            android:background="@drawable/red_circle"
            android:text="@string/gps_symbol"
            android:gravity="center" />

        <TextView
            android:id="@+id/DataReceptionWindTextView"
            style="@style/ConnectionStatusText"
            android:layout_height="match_parent"
            android:layout_width="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DataReceptionGpsTextView"
            android:background="@drawable/red_circle"
            android:text="@string/wind_symbol"
            android:gravity="center" />

        <TextView
            android:id="@+id/DataReceptionWaterTextView"
            style="@style/ConnectionStatusText"
            android:layout_height="match_parent"
            android:layout_width="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DataReceptionWindTextView"
            android:background="@drawable/red_circle"
            android:text="@string/speed_symbol"
            android:gravity="center" />

        <TextView
            android:id="@+id/DataReceptionCompassTextView"
            style="@style/ConnectionStatusText"
            android:layout_height="match_parent"
            android:layout_width="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DataReceptionWaterTextView"
            android:background="@drawable/red_circle"
            android:text="@string/compass_symbol"
            android:gravity="center" />

        <TextView
            android:id="@+id/LogTagTextView"
            android:textColor="@color/primaryLightColor"
            android:textSize="11sp"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="xxx-xxx" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
