<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.boat_setup.BoatSetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Widget.Theme.OttoPi.ActionBar.Fullscreen"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <com.santacruzinstruments.ottopi.ui.polar.PolarDrawableView
            android:id="@+id/polarView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".5"
            app:axis_color="@color/primaryLightColor"
            app:axis_width="6"
            app:history_color="@color/secondaryDarkColor"
            app:history_radius="20"
            app:polar_curve_color="@color/primaryTextColor"
            app:polar_curve_width="6"
            app:target_angle_color="@color/white"
            app:target_angle_width="6"
            app:twa_line_color="@color/secondaryLightColor"
            app:twa_line_width="6"
            app:vmg_line_color="@color/secondaryLightColor"
            app:vmg_line_width="6"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ssid_list"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"

            android:hint="@string/ssid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/ssid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/hostNameTextLabel"
            style="@style/RaceSetupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host"
            app:layout_constraintTop_toTopOf="@+id/hostNameTextView"
            app:layout_constraintBottom_toBottomOf="@+id/hostNameTextView"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <AutoCompleteTextView
            android:id="@+id/hostNameTextView"
            style="@style/RaceSetupText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ssid_list"
            app:layout_constraintStart_toEndOf="@+id/hostNameTextLabel"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:layout_marginStart="8dp"
            tools:text="localhost"
            android:completionThreshold="1"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/hostPortTextLabel"
            style="@style/RaceSetupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            app:layout_constraintTop_toTopOf="@+id/portTextView"
            app:layout_constraintBottom_toBottomOf="@+id/portTextView"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <AutoCompleteTextView
            android:id="@+id/portTextView"
            style="@style/RaceSetupText"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hostNameTextView"
            app:layout_constraintStart_toEndOf="@+id/hostPortTextLabel"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:layout_marginStart="8dp"
            tools:text="80"
            android:completionThreshold="1"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/startCalibrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:text="@string/start_calibration"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/polarView"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/awaChart"
            android:layout_width="300dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toEndOf="@id/hostNameTextView"
            app:layout_constraintTop_toBottomOf="@id/ssid_list"
            />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/spdChart"
            android:layout_width="200dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toEndOf="@id/awaChart"
            app:layout_constraintTop_toBottomOf="@id/startCalibrationButton"
            />

        <TextView
            android:id="@+id/awaBiasTextLabel"
            style="@style/RaceSetupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/awaChart"
            app:layout_constraintStart_toEndOf="@id/polarView"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/spdBiasTextLabel"
            style="@style/RaceSetupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/awaChart"
            app:layout_constraintStart_toStartOf="@id/spdChart"
            android:layout_marginStart="8dp"
            />

        <com.github.mikephil.charting.charts.ScatterChart
            android:id="@+id/deviationChart"
            android:layout_width="500dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toEndOf="@id/hostNameTextView"
            app:layout_constraintTop_toBottomOf="@id/awaBiasTextLabel"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>